[package]
name = "monte-carlo-pi"
version = "0.1.0"
license = "0BSD"
edition = "2024"
publish = false

[dependencies]
argh = { version = "0.1.13", default-features = false }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
rand_xoshiro = { version = "0.7.0", default-features = false }
rayon = { version = "1.10.0", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
